Courses & Campus Section Completed

--- a/index.html
+++ b/index.html
@@ -38,5 +38,53 @@
             <a href="" class="hero-btn">Visii us to know more</a>
         </div>
     </section>
+
+    <!-- Courses -->
+    <section class="courses">
+        <h1>Courses We Offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, sequi!</p>
+
+        <div class="row">
+            <div class="course_col">
+                <h3>Beginner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
+            </div>
+            <div class="course_col">
+                <h3>Intermediate</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
+            </div>
+            <div class="course_col">
+                <h3>Advanced</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Campus -->
+    <section class="campus">
+        <h1>Our Global Campus</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        <div class="row">
+            <div class="campus_col">
+                <img src="images/london.png" alt="">
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus_col">
+                <img src="images/newyork.png" alt="">
+                <div class="layer">
+                    <h3>NEW YORK</h3>
+                </div>
+            </div>
+            <div class="campus_col">
+                <img src="images/washington.png" alt="">
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
