--- a/index.html
+++ b/index.html
@@ -1,90 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University Website Design</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <!-- Google Fonts Link -->
-    <link rel="stylesheet" href="https://font.googleapis.com/css2?family=Poppina:wght@100;200;300;400;600;700&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://font.googleapis.com/css2?family=Poppina:wght@100;200;300;400;600;700&display=swap"
+    />
     <!-- Font Awesome CDN -->
-    <script src="https://kit.fontawesome.com/9c608bb455.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9c608bb455.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- JavaScript File -->
     <script src="script.js" defer></script>
-
-</head>
-<body>
+  </head>
+  <body>
     <section class="header">
-        <nav>
-            <a href="index.html">
-                <img src="images/logo.png" alt="">
-            </a>
+      <nav>
+        <a href="index.html">
+          <img src="images/logo.png" alt="" />
+        </a>
 
-            <div class="nav_links" id="navLinks">
-                <i class="fas fa-times" id="showMenu"></i>
-                <ul>
-                    <li><a href="home">home</a></li>
-                    <li><a href="">about</a></li>
-                    <li><a href="">course</a></li>
-                    <li><a href="">blog</a></li>
-                    <li><a href="">contact</a></li>
-                </ul>
-            </div>
-            <i class="fa fa-bars" id="closeMenu"></i>
-        </nav>
-        <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Making a website is one of the easiest things in the world right now, you just need to lear HTML, CSS, JavaScript and you are good to go</p>
-            <a href="" class="hero-btn">Visii us to know more</a>
+        <div class="nav_links" id="navLinks">
+          <i class="fas fa-times" id="showMenu"></i>
+          <ul>
+            <li><a href="home">home</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">course</a></li>
+            <li><a href="">blog</a></li>
+            <li><a href="">contact</a></li>
+          </ul>
         </div>
+        <i class="fa fa-bars" id="closeMenu"></i>
+      </nav>
+      <div class="text-box">
+        <h1>World's Biggest University</h1>
+        <p>
+          Making a website is one of the easiest things in the world right now,
+          you just need to lear HTML, CSS, JavaScript and you are good to go
+        </p>
+        <a href="" class="hero-btn">Visii us to know more</a>
+      </div>
     </section>
 
     <!-- Courses -->
     <section class="courses">
-        <h1>Courses We Offer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, sequi!</p>
+      <h1>Courses We Offer</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
+        sequi!
+      </p>
 
-        <div class="row">
-            <div class="course_col">
-                <h3>Beginner</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
-            </div>
-            <div class="course_col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
-            </div>
-            <div class="course_col">
-                <h3>Advanced</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati expedita quaerat consequatur reprehenderit illo unde quisquam at neque? Eius eaque ipsa eligendi laborum tempore blanditiis necessitatibus eveniet beatae facere.</p>
-            </div>
+      <div class="row">
+        <div class="course_col">
+          <h3>Beginner</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            obcaecati expedita quaerat consequatur reprehenderit illo unde
+            quisquam at neque? Eius eaque ipsa eligendi laborum tempore
+            blanditiis necessitatibus eveniet beatae facere.
+          </p>
         </div>
+        <div class="course_col">
+          <h3>Intermediate</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            obcaecati expedita quaerat consequatur reprehenderit illo unde
+            quisquam at neque? Eius eaque ipsa eligendi laborum tempore
+            blanditiis necessitatibus eveniet beatae facere.
+          </p>
+        </div>
+        <div class="course_col">
+          <h3>Advanced</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            obcaecati expedita quaerat consequatur reprehenderit illo unde
+            quisquam at neque? Eius eaque ipsa eligendi laborum tempore
+            blanditiis necessitatibus eveniet beatae facere.
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- Campus -->
     <section class="campus">
-        <h1>Our Global Campus</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <h1>Our Global Campus</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-        <div class="row">
-            <div class="campus_col">
-                <img src="images/london.png" alt="">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus_col">
-                <img src="images/newyork.png" alt="">
-                <div class="layer">
-                    <h3>NEW YORK</h3>
-                </div>
-            </div>
-            <div class="campus_col">
-                <img src="images/washington.png" alt="">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
-            </div>
+      <div class="row">
+        <div class="campus_col">
+          <img src="images/london.png" alt="" />
+          <div class="layer">
+            <h3>LONDON</h3>
+          </div>
         </div>
+        <div class="campus_col">
+          <img src="images/newyork.png" alt="" />
+          <div class="layer">
+            <h3>NEW YORK</h3>
+          </div>
+        </div>
+        <div class="campus_col">
+          <img src="images/washington.png" alt="" />
+          <div class="layer">
+            <h3>WASHINGTON</h3>
+          </div>
+        </div>
+      </div>
     </section>
-</body>
+
+    <!-- Facilities -->
+    <section class="facilities">
+      <h1>Our Facilities</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+      <div class="row">
+        <div class="facilities_col">
+          <img src="images/library.png" alt="" />
+          <h4>World Class Library</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum vero
+            blanditiis dolor.
+          </p>
+        </div>
+        <div class="facilities_col">
+          <img src="images/basketball.png" alt="" />
+          <h4>Largest Play Ground</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum vero
+            blanditiis dolor.
+          </p>
+        </div>
+        <div class="facilities_col">
+          <img src="images/cafeteria.png" alt="" />
+          <h4>Tasty & Healthy Food</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum vero
+            blanditiis dolor.
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
