Added testimonial section

--- a/index.html
+++ b/index.html
@@ -145,5 +145,39 @@
         </div>
       </div>
     </section>
+
+    <!-- testimonials section -->
+    <section class="testimonials">
+      <h1>What Our Students Say</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+
+      <div class="row">
+        <div class="testimonial_col">
+          <img src="images/user1.jpg" alt="">
+          <div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam minima obcaecati est, ad fugit deserunt iusto dolor explicabo iste maxime labore, minus optio ipsa. Quibusdam accusantium animi nesciunt.</p>
+            <h3>Christine Berkley</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+        </div>
+
+        <div class="testimonial_col">
+          <img src="images/user2.jpg" alt="">
+          <div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam minima obcaecati est, ad fugit deserunt iusto dolor explicabo iste maxime labore, minus optio ipsa. Quibusdam accusantium animi nesciunt.</p>
+            <h3>Paul Heins</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
