--- a/index.html
+++ b/index.html
@@ -179,5 +179,11 @@
         </div>
       </div>
     </section>
+
+    <!-- Call To Action -->
+    <section class="cta">
+      <h1>Enroll For Our Various Online Courses <br> Anywhere From The World</h1>
+      <a href="" class="hero-btn">Contact Us</a>
+    </section>
   </body>
 </html>
